# aegis

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/src/aegis/: __init__.py  config.py  main.py  state.py
backend/src/aegis/agent/: __init__.py  orchestrator.py  prompts.py  tools.py
backend/src/aegis/api/: __init__.py  assets.py  commands.py  health.py  missions.py  router.py  telemetry.py
backend/src/aegis/events/: __init__.py  detector.py  handlers.py
backend/src/aegis/models/: __init__.py  asset.py  audit.py  command.py  mission.py
backend/src/aegis/policy/: __init__.py  classifier.py  engine.py  rules.py
backend/src/aegis/services/: __init__.py  asset_service.py  mission_service.py  telemetry_service.py
backend/src/aegis/simulation/: __init__.py  engine.py  scenarios.py  vehicle.py  world.py
backend/tests/: conftest.py
backend/tests/test_api/: test_commands.py  test_health.py
backend/tests/test_policy/: test_rules.py
backend/tests/test_simulation/: test_engine.py  test_scenarios.py  test_vehicle.py
docs/: architecture.md  data-model.md  operator-manual.md  requirements.md  safety-model.md
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AlertFeed.tsx  ApprovalModal.tsx  AssetPanel.tsx  CommandConsole.tsx  ControlBar.tsx  MapView.tsx  MissionTimeline.tsx  (+2 more)
infra/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
scenarios/: perimeter-patrol.json  search-and-rescue.json
scripts/: setup.sh
(+6 files in other folders)
